# Shapes

./: build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  gl_code.cpp
src/main/java/com/lemoncookies/shapes/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
